--- a/views/home.mustache
+++ b/views/home.mustache
@@ -24,7 +24,7 @@
             <a href=""><img src="/assets/logo.png" class="logo" alt="Logo"></a>
             <li><a href="">Home</a></li>
             <li><a href="/menu">Menu</a></li>
-            <li><a href="">FAQs</a></li>
+            <li><a href="/faqs">FAQs</a></li>
             <li><a href="">Contact</a></li>
         </ul>
         <!-- Register and Login Buttons -->
