--- a/style.css
+++ b/style.css
@@ -637,6 +637,7 @@ button:hover {
             cursor: pointer;
         }
 
+        /* For Menu Page, Pending */
 #sidebar {
     width: 250px;
     position: fixed;
