--- a/views/menu.mustache
+++ b/views/menu.mustache
@@ -1,15 +1,13 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{{title}}</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-    <h2>{{title}}</h2>
+<form action="/order/create" method="POST">
+    <label for="customerName">Customer Name:</label>
+    <input type="text" id="customerName" name="customerName" required>
+    <br><br>
 
-    <!-- Table to display menu items -->
+    <!-- Add the Date Picker here -->
+    <label for="orderDate">Order Date:</label>
+    <input type="date" id="orderDate" name="orderDate" required>
+    <br><br>
+
     <table border="1" id="menuTable">
         <thead>
             <tr>
@@ -18,7 +16,8 @@
                 <th>Type</th>
                 <th>Price</th>
                 <th>Image</th>
-                <th>Select</th> <!-- Add select option -->
+                <th>Select</th>
+                <th>Quantity</th>
             </tr>
         </thead>
         <tbody>
@@ -34,34 +33,17 @@
                     {{/Image}}
                 </td>
                 <td>
-                    <!-- Add a checkbox for selection -->
-                    <input type="checkbox" name="menuItems[]" value="{{Id}}"> 
+                    <input type="checkbox" name="menuItemIds[]" value="{{Id}}">
+                </td>
+                <td>
+                    <input type="number" name="quantities[{{Id}}]" min="1" value="1">
                 </td>
             </tr>
             {{/menu}}
         </tbody>
     </table>
-    
-    <div id="sidebar">
-    <h3>Filter by Category</h3>
-    <ul>
-        <li><a href="#" class="filter" data-filter="hot">Best Sellers</a></li>
-        <li><a href="#" class="filter" data-filter="cold">Hot Coffees</a></li>
-        <li><a href="#" class="filter" data-filter="refreshers">Cold Coffees</a></li>
-        <li><a href="#" class="filter" data-filter="iced_tea">Iced Tea & Lemonade</a></li>
-        <li><a href="#" class="filter" data-filter="blended">Blended Beverages</a></li>
-        <li><a href="#" class="filter" data-filter="milk_juice">Milk, Juice & More</a></li>
-        
-    </ul>
-</div>
 
+    <button type="submit">Place Order</button>
+</form>
 
-    <!-- Order form -->
-    <form action="/order/create" method="POST">
-        <label for="customerName">Customer Name:</label>
-        <input type="text" id="customerName" name="customerName" required>
-        <br><br>
-        <button type="submit">Place Order</button>
-    </form>
-</body>
-</html>
+<a href="/orders">Go to orders</a>
